// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`HotActiveUsers - Snapshots > matches snapshot with active users 1`] = `
<div
  class="flex w-full flex-col gap-2"
  data-testid="hot-active-users"
>
  <h5
    class="font-light text-muted-foreground"
  >
    Active users
  </h5>
  <div
    class="gap-3.5 rounded-md py-2 lg:gap-3"
  >
    <div
      data-testid="hot-active-user-user-1"
    >
      Alice
    </div>
    <div
      data-testid="hot-active-user-user-2"
    >
      Bob
    </div>
  </div>
</div>
`;

exports[`HotActiveUsers - Snapshots > matches snapshot with the heading visually hidden on mobile 1`] = `
<div
  class="flex w-full flex-col gap-2"
  data-testid="hot-active-users"
>
  <h5
    class="font-light text-muted-foreground sr-only lg:not-sr-only"
  >
    Active users
  </h5>
  <div
    class="gap-3.5 rounded-md py-2 lg:gap-3"
  >
    <div
      data-testid="hot-active-user-user-1"
    >
      Alice
    </div>
  </div>
</div>
`;
